--- a/vite-project/src/components/components.module.css
+++ b/vite-project/src/components/components.module.css
@@ -35,3 +35,61 @@ width: 100%;
     color: var(--clr-white);
     width: 7rem;
 }
+
+/* TRENDING COMPONENT */
+.trend_container{
+    display: flex;
+    flex-direction: column;
+}
+
+.trend_inner{
+    display: flex;
+}
+
+.top_container{
+    position: relative;
+}
+
+.main_image{
+    width: 240px;
+    object-fit: scale-down;
+    position: relative;
+}
+
+.elements_container{
+    position: absolute;
+    width: 100%;
+    padding: 10px;
+    display: grid;
+    /* background-color: red; */
+    top: 0;
+}
+
+.element_inner_container{
+    display: flex;
+    gap: 6px;
+    margin-top: 70px;
+    /* background-color: rgb(34, 116, 116); */
+}
+
+.element_inner_container > p {
+    font-size: .75rem;
+}
+
+.separator{
+    vertical-align: middle;
+    line-height: 1;
+}
+
+.cat_text > span {
+    margin-right: 4px;
+}
+
+.bookmark_img{
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 50%;
+    border: 1px solid red;
+}
