--- a/vite-project/src/components/components.module.css
+++ b/vite-project/src/components/components.module.css
@@ -1,5 +1,8 @@
-.mainContainer{
-width: 100%;
+.site_wrapper{
+    /* width: 100vw; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* gap: 24px; */
 }
 
 .header_container,
@@ -8,12 +11,14 @@ width: 100%;
 }
 
 .header_container{
-    width: 100%;
+    /* position:fixed; */
+    /* width: 100vw; */
     height: 56px;
     justify-content: space-between;
     background-color: var(--semi-dark-blue);
     align-items: center;
-    padding: 0 16px;
+    padding: 0 1em;
+    border: 1px solid green;
 
 }
 
@@ -23,8 +28,9 @@ width: 100%;
 }
 
 .nav_container{
-    justify-content: space-between;
-    gap: 24px;
+    /* justify-content: space-between; */
+    gap: 1.5em;
+    border: 1px solid red;
 }
 .nav_container > img{
     width: 16px;
@@ -40,10 +46,20 @@ width: 100%;
 .trend_container{
     display: flex;
     flex-direction: column;
+    gap: 16px;
+    margin-bottom: 24px;
+    margin-left: 16px;
+}
+
+.trend_container > p {
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 100;
 }
 
 .trend_inner{
     display: flex;
+    gap: 16px;
 }
 
 .top_container{
@@ -54,6 +70,7 @@ width: 100%;
     width: 240px;
     object-fit: scale-down;
     position: relative;
+    border-radius: 5px;
 }
 
 .elements_container{
@@ -61,15 +78,14 @@ width: 100%;
     width: 100%;
     padding: 10px;
     display: grid;
-    /* background-color: red; */
     top: 0;
 }
 
 .element_inner_container{
     display: flex;
     gap: 6px;
-    margin-top: 70px;
-    /* background-color: rgb(34, 116, 116); */
+    margin-top: 55px;
+    font-weight: 100;
 }
 
 .element_inner_container > p {
@@ -86,10 +102,12 @@ width: 100%;
 }
 
 .bookmark_img{
+    display: flex;
     width: 32px;
     height: 32px;
-    text-align: center;
-    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
-    border: 1px solid red;
+    background-color: rgba(90, 105, 143, 0.75);;
+    margin-left: 85%;
 }
