--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -29,6 +29,6 @@ body {
     font-family: "Outfit", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #D0D6F9;
+    color: var(--clr-white);
     background: var(--dark-blue);
 }
