--- a/vite-project/src/components/components.module.css
+++ b/vite-project/src/components/components.module.css
@@ -11,14 +11,12 @@
 }
 
 .header_container{
-    /* position:fixed; */
-    /* width: 100vw; */
+    width: 100%;
     height: 56px;
     justify-content: space-between;
     background-color: var(--semi-dark-blue);
     align-items: center;
     padding: 0 1em;
-    border: 1px solid green;
 
 }
 
@@ -28,10 +26,9 @@
 }
 
 .nav_container{
-    /* justify-content: space-between; */
     gap: 1.5em;
-    border: 1px solid red;
 }
+
 .nav_container > img{
     width: 16px;
     object-fit: scale-down;
@@ -49,6 +46,8 @@
     gap: 16px;
     margin-bottom: 24px;
     margin-left: 16px;
+    overflow-x: auto;
+    scrollbar-width: none;
 }
 
 .trend_container > p {
