--- a/vite-project/src/App.module.css
+++ b/vite-project/src/App.module.css
@@ -1,27 +1,25 @@
-/* HOME PAGE */
-.recommended_container{
+/* PAGES ELEMENTS */
+.main_container{
     display: flex;
     flex-direction: column;
     gap: 24px;
     margin-left: 16px;
 }
 
-.recommended_container > p {
+.main_container > p {
     color: white;
     font-size: 1.25rem;
     font-weight: 100;
 }
 
-.recommended_inner{
+.main_inner{
     display: grid;
     width: 95%;
-    /* border: 1px solid rgb(249, 249, 255); */
     grid-template-columns: repeat(2, auto);
     gap: 15px;
 }
 
 .movie_container {
-    /* border: 1px red solid; */
     width: 50%;
     min-width: 164px;
     position: relative;
@@ -35,7 +33,7 @@
 }
 
 .movie_container > .bookmark_logo{
-    background-color: rgba(90, 105, 143, 0.75);
+    background-color: rgba(90, 105, 143, 0.65);
     display: flex;;
     width: 32px;
     height: 32px;;
