--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -171,6 +171,7 @@
         height: 95dvh;
         width: 96px;
         justify-content:space-between;
+        gap: 1em;
         padding: 2em 0;
         border-radius: 15px;
     }
